<resources>
    <string name="app_name">Матлашевський Олександр</string>
    <string name="kom_gosp">Комунальне господарство</string>
    <string name="v_roboti">В роботі</string>
    <string name="stvoreno">Створено</string>
    <string name="stvoreno_data">25 лютого 2016</string>
    <string name="zareestrovano">Зареєстровано</string>
    <string name="zareestrovano_data">26 лютого 2016</string>
    <string name="virishiti">Вирішити до</string>
    <string name="virishiti_data">29 лютого 2016</string>
    <string name="vidpovidalnii">Відповідальний</string>
    <string name="vidpovidalnii_pidpr">Дніпропетровський МВК()</string>
    <string name="opisanie">Открытый люк (возле рекламного щита), район поворота 18 и 19 трамваев на проспект Мира с Донецкого шоссе</string>
</resources>
